--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+    implementation 'com.borjabravo:readmoretextview:2.1.0'
 
 }
