--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DoAn_RapPhim">
-        <activity android:name=".TabTaiKhoan"/>
-        <activity android:name=".DangKyActiviti" />
+        <activity android:name=".packageThongTinUser.TabTaiKhoan"/>
+        <activity android:name=".packageDangKyDangNhap.DangKyActiviti" />
         <activity android:name=".packageTrangChiTiet.TrangChiTiet" />
         <activity android:name=".MainActivity">
             <intent-filter>
