--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".packageTrangChiTiet.TrangChiTiet" />
         <activity android:name=".packageThongTinUser.ThayDoiThongTin"/>
         <activity android:name=".packageThongTinUser.ThayDoiMatKhau"/>
+        <activity android:name=".packageThanhToan.ThanhToan"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
