--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
     implementation 'com.borjabravo:readmoretextview:2.1.0'
 
+    compile 'com.makeramen:roundedimageview:2.3.0'
+
 }
