--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,15 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="RẠP PHIM"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:hardwareAccelerated="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DoAn_RapPhim">
-        <activity android:name=".packageTrangChiTiet.packageThanhToan.ThongTinVe"></activity>
+        <activity android:name=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.XacThucMatKhauActivity"></activity>
+        <activity android:name=".packageTrangChiTiet.packageThanhToan.ThongTinVe" />
         <activity android:name=".MainActivity" />
         <activity android:name=".packageDangKyDangNhap.packageDangNhap.QuenMatKhauActivity" />
         <activity android:name=".packageDangKyDangNhap.packageDangKy.DangKyActivity" />
