--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DoAn_RapPhim">
-
-        <activity android:name=".packageTrangChiTiet.packageThanhToan.ThongTinGiaoDich"></activity>
-
-        <activity android:name=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.XacThucMatKhauActivity"></activity>
-
-
+        <activity android:name=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.DSLichSuDatVeActivity"></activity>
+        <activity android:name=".packageTrangChiTiet.packageThanhToan.ThongTinGiaoDich" />
+        <activity android:name=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.XacThucMatKhauActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".packageDangKyDangNhap.packageDangNhap.QuenMatKhauActivity" />
         <activity android:name=".packageDangKyDangNhap.packageDangKy.DangKyActivity" />
