--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity android:name=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.DSLichSuDatVeActivity"></activity>
         <activity android:name=".packageTrangChiTiet.packageThanhToan.ThongTinGiaoDich" />
         <activity android:name=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.XacThucMatKhauActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"  android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".packageDangKyDangNhap.packageDangNhap.QuenMatKhauActivity" />
         <activity android:name=".packageDangKyDangNhap.packageDangKy.DangKyActivity" />
         <activity android:name=".packageTrangChiTiet.TrangChiTiet" />
